--- a/docs/visual-basic/misc/bc30051.md
+++ b/docs/visual-basic/misc/bc30051.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30051
 ms.assetid: a462e73e-2ff4-45ee-916f-56642dc5688c
-ms.openlocfilehash: ba392d3a1a30ed3edd015e4be4c4e25de9d20231
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 599bf5d100942c72aeed864c295dc4dd00ce0c23
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64623879"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391455"
 ---
-# <a name="paramarray-parameter-must-be-a-one-dimensional-array"></a><span data-ttu-id="68611-102">Il parametro ParamArray deve essere una matrice unidimensionale</span><span class="sxs-lookup"><span data-stu-id="68611-102">ParamArray parameter must be a one-dimensional array</span></span>
-<span data-ttu-id="68611-103">Un argomento `ParamArray` deve essere dichiarato come tipo di matrice unidimensionale.</span><span class="sxs-lookup"><span data-stu-id="68611-103">A `ParamArray` argument must be declared as a one-dimensional array type.</span></span> <span data-ttu-id="68611-104">La dichiarazione specifica più di una dimensione per l'argomento `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="68611-104">The declaration specifies more than one dimension for the `ParamArray` argument.</span></span>  
+# <a name="paramarray-parameter-must-be-a-one-dimensional-array"></a><span data-ttu-id="b4fca-102">Il parametro ParamArray deve essere una matrice unidimensionale</span><span class="sxs-lookup"><span data-stu-id="b4fca-102">ParamArray parameter must be a one-dimensional array</span></span>
+<span data-ttu-id="b4fca-103">Un argomento `ParamArray` deve essere dichiarato come tipo di matrice unidimensionale.</span><span class="sxs-lookup"><span data-stu-id="b4fca-103">A `ParamArray` argument must be declared as a one-dimensional array type.</span></span> <span data-ttu-id="b4fca-104">La dichiarazione specifica più di una dimensione per l'argomento `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="b4fca-104">The declaration specifies more than one dimension for the `ParamArray` argument.</span></span>  
   
- <span data-ttu-id="68611-105">**ID errore:** BC30051</span><span class="sxs-lookup"><span data-stu-id="68611-105">**Error ID:** BC30051</span></span>  
+ <span data-ttu-id="b4fca-105">**ID errore:** BC30051</span><span class="sxs-lookup"><span data-stu-id="b4fca-105">**Error ID:** BC30051</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="68611-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="68611-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b4fca-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b4fca-106">To correct this error</span></span>  
   
-- <span data-ttu-id="68611-107">Rimuovere tutte le virgole tra parentesi dopo il nome dell'argomento `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="68611-107">Remove all commas inside the parentheses following the `ParamArray` argument name.</span></span>  
+- <span data-ttu-id="b4fca-107">Rimuovere tutte le virgole tra parentesi dopo il nome dell'argomento `ParamArray` .</span><span class="sxs-lookup"><span data-stu-id="b4fca-107">Remove all commas inside the parentheses following the `ParamArray` argument name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="68611-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="68611-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b4fca-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b4fca-108">See also</span></span>
 
-- [<span data-ttu-id="68611-109">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="68611-109">Parameter Arrays</span></span>](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
-- [<span data-ttu-id="68611-110">ParamArray</span><span class="sxs-lookup"><span data-stu-id="68611-110">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [<span data-ttu-id="68611-111">Matrici</span><span class="sxs-lookup"><span data-stu-id="68611-111">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="b4fca-109">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="b4fca-109">Parameter Arrays</span></span>](../programming-guide/language-features/procedures/parameter-arrays.md)
+- [<span data-ttu-id="b4fca-110">ParamArray</span><span class="sxs-lookup"><span data-stu-id="b4fca-110">ParamArray</span></span>](../language-reference/modifiers/paramarray.md)
+- [<span data-ttu-id="b4fca-111">Matrici</span><span class="sxs-lookup"><span data-stu-id="b4fca-111">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
