--- a/docs/visual-basic/misc/bc30060.md
+++ b/docs/visual-basic/misc/bc30060.md
@@ -1,5 +1,5 @@
 ---
-title: Conversione da '<type1>'a'<type2>' non può verificarsi in un'espressione costante
+title: La conversione da '<type1>' a '<type2>' non può verificarsi in un'espressione costante
 ms.date: 07/20/2015
 f1_keywords:
 - bc30060
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30060
 ms.assetid: bea60254-67b6-4881-91d2-47854c4d073c
-ms.openlocfilehash: 680a3504a463956e689eca25da979edb511af8e3
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d7f0ca442a000c36c50a58e719b9d4c23f4bd5a8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936149"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391261"
 ---
-# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression"></a><span data-ttu-id="0bcff-102">Conversione da '\<type1 >' a '\<type2 >' non può verificarsi in un'espressione costante</span><span class="sxs-lookup"><span data-stu-id="0bcff-102">Conversion from '\<type1>' to '\<type2>' cannot occur in a constant expression</span></span>
-<span data-ttu-id="0bcff-103">L'espressione di inizializzazione in un'istruzione `Const` restituisce un tipo di dati che non può essere convertito nel tipo dichiarato della costante.</span><span class="sxs-lookup"><span data-stu-id="0bcff-103">The initialization expression in a `Const` statement evaluates to a data type that cannot be converted to the declared type of the constant.</span></span>  
+# <a name="conversion-from-type1-to-type2-cannot-occur-in-a-constant-expression"></a><span data-ttu-id="11831-102">La conversione da '\<type1>' a '\<type2>' non può verificarsi in un'espressione costante</span><span class="sxs-lookup"><span data-stu-id="11831-102">Conversion from '\<type1>' to '\<type2>' cannot occur in a constant expression</span></span>
+<span data-ttu-id="11831-103">L'espressione di inizializzazione in un'istruzione `Const` restituisce un tipo di dati che non può essere convertito nel tipo dichiarato della costante.</span><span class="sxs-lookup"><span data-stu-id="11831-103">The initialization expression in a `Const` statement evaluates to a data type that cannot be converted to the declared type of the constant.</span></span>  
   
- <span data-ttu-id="0bcff-104">**ID errore:** BC30060</span><span class="sxs-lookup"><span data-stu-id="0bcff-104">**Error ID:** BC30060</span></span>  
+ <span data-ttu-id="11831-104">**ID errore:** BC30060</span><span class="sxs-lookup"><span data-stu-id="11831-104">**Error ID:** BC30060</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0bcff-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0bcff-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="11831-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="11831-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="0bcff-106">Inizializzare la costante con un'espressione di un tipo di dati che può essere convertito nel tipo dichiarato della costante.</span><span class="sxs-lookup"><span data-stu-id="0bcff-106">Initialize the constant with an expression of a data type that can be converted to the type declared for the constant.</span></span>  
+1. <span data-ttu-id="11831-106">Inizializzare la costante con un'espressione di un tipo di dati che può essere convertito nel tipo dichiarato della costante.</span><span class="sxs-lookup"><span data-stu-id="11831-106">Initialize the constant with an expression of a data type that can be converted to the type declared for the constant.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0bcff-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0bcff-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="11831-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="11831-107">See also</span></span>
 
-- [<span data-ttu-id="0bcff-108">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="0bcff-108">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
-- [<span data-ttu-id="0bcff-109">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0bcff-109">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+- [<span data-ttu-id="11831-108">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="11831-108">Const Statement</span></span>](../language-reference/statements/const-statement.md)
+- [<span data-ttu-id="11831-109">Conversioni di tipi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="11831-109">Type Conversions in Visual Basic</span></span>](../programming-guide/language-features/data-types/type-conversions.md)
