--- a/docs/visual-basic/misc/bc30274.md
+++ b/docs/visual-basic/misc/bc30274.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro '<parametername>'di'<methodname>' ha già un argomento corrispondente
+title: Il parametro '<parametername>' di '<methodname>' ha già un argomento corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - bc30274
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30274
 ms.assetid: 5ce7ed2b-d3b3-409d-946a-65f4c9af986a
-ms.openlocfilehash: 54415918aa96bceff3cae361699171d76105face
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 14ea9535517b7ecff4ba003e12c19fbc3a443856
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664088"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390819"
 ---
-# <a name="parameter-parametername-of-methodname-already-has-a-matching-argument"></a><span data-ttu-id="304bc-102">Parametro '\<nomeparametro >' di '\<NomeMetodo >' ha già un argomento corrispondente</span><span class="sxs-lookup"><span data-stu-id="304bc-102">Parameter '\<parametername>' of '\<methodname>' already has a matching argument</span></span>
-<span data-ttu-id="304bc-103">Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="304bc-103">An argument is passed by name more than once in the same procedure call.</span></span>  
+# <a name="parameter-parametername-of-methodname-already-has-a-matching-argument"></a><span data-ttu-id="e43c8-102">Il parametro '\<parametername>' di '\<methodname>' ha già un argomento corrispondente</span><span class="sxs-lookup"><span data-stu-id="e43c8-102">Parameter '\<parametername>' of '\<methodname>' already has a matching argument</span></span>
+<span data-ttu-id="e43c8-103">Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="e43c8-103">An argument is passed by name more than once in the same procedure call.</span></span>  
   
- <span data-ttu-id="304bc-104">**ID errore:** BC30274</span><span class="sxs-lookup"><span data-stu-id="304bc-104">**Error ID:** BC30274</span></span>  
+ <span data-ttu-id="e43c8-104">**ID errore:** BC30274</span><span class="sxs-lookup"><span data-stu-id="e43c8-104">**Error ID:** BC30274</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="304bc-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="304bc-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e43c8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e43c8-105">To correct this error</span></span>  
   
-- <span data-ttu-id="304bc-106">Controllare se uno dei nomi degli argomenti non sia stato digitato in modo errato.</span><span class="sxs-lookup"><span data-stu-id="304bc-106">Check to see if one of the argument names is misspelled.</span></span>  
+- <span data-ttu-id="e43c8-106">Controllare se uno dei nomi degli argomenti non sia stato digitato in modo errato.</span><span class="sxs-lookup"><span data-stu-id="e43c8-106">Check to see if one of the argument names is misspelled.</span></span>  
   
-- <span data-ttu-id="304bc-107">Rimuovere l'argomento duplicato dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="304bc-107">Remove the duplicated argument from the argument list.</span></span>  
+- <span data-ttu-id="e43c8-107">Rimuovere l'argomento duplicato dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="e43c8-107">Remove the duplicated argument from the argument list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="304bc-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="304bc-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e43c8-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e43c8-108">See also</span></span>
 
-- [<span data-ttu-id="304bc-109">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="304bc-109">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [<span data-ttu-id="e43c8-109">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="e43c8-109">Passing Arguments by Position and by Name</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
