--- a/docs/visual-basic/misc/bc30275.md
+++ b/docs/visual-basic/misc/bc30275.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di evento di interfaccia"
+title: "' <specifier> ' non è valido in una dichiarazione di evento di interfaccia"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30275
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30275
 ms.assetid: bd12c952-c619-4753-8d6d-90ef4086fdc2
-ms.openlocfilehash: 2a2678f6f963aea3571fd3eb19577a7f0c5305e3
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 34f39626633a7efe8dae0d4f7f971f96909312f1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61934212"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390806"
 ---
-# <a name="specifier-is-not-valid-on-an-interface-event-declaration"></a><span data-ttu-id="b757e-102">'\<identificatore >' non è valido in una dichiarazione di evento di interfaccia</span><span class="sxs-lookup"><span data-stu-id="b757e-102">'\<specifier>' is not valid on an interface event declaration</span></span>
-<span data-ttu-id="b757e-103">Un'istruzione `Event` all'interno di un'interfaccia contiene una parola chiave non consentita, ad esempio `Implements`.</span><span class="sxs-lookup"><span data-stu-id="b757e-103">An `Event` statement inside an interface contains a keyword that is not allowed, such as `Implements`.</span></span> <span data-ttu-id="b757e-104">Un'interfaccia può solo definire i membri, non implementarli.</span><span class="sxs-lookup"><span data-stu-id="b757e-104">An interface can only define members, not implement them.</span></span>  
+# <a name="specifier-is-not-valid-on-an-interface-event-declaration"></a><span data-ttu-id="66262-102">' \<specifier> ' non è valido in una dichiarazione di evento di interfaccia</span><span class="sxs-lookup"><span data-stu-id="66262-102">'\<specifier>' is not valid on an interface event declaration</span></span>
+<span data-ttu-id="66262-103">Un'istruzione `Event` all'interno di un'interfaccia contiene una parola chiave non consentita, ad esempio `Implements`.</span><span class="sxs-lookup"><span data-stu-id="66262-103">An `Event` statement inside an interface contains a keyword that is not allowed, such as `Implements`.</span></span> <span data-ttu-id="66262-104">Un'interfaccia può solo definire i membri, non implementarli.</span><span class="sxs-lookup"><span data-stu-id="66262-104">An interface can only define members, not implement them.</span></span>  
   
- <span data-ttu-id="b757e-105">**ID errore:** BC30275</span><span class="sxs-lookup"><span data-stu-id="b757e-105">**Error ID:** BC30275</span></span>  
+ <span data-ttu-id="66262-105">**ID errore:** BC30275</span><span class="sxs-lookup"><span data-stu-id="66262-105">**Error ID:** BC30275</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b757e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b757e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="66262-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="66262-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="b757e-107">Rimuovere la parola chiave dall'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="b757e-107">Remove the keyword from the declaration statement.</span></span>  
+1. <span data-ttu-id="66262-107">Rimuovere la parola chiave dall'istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="66262-107">Remove the keyword from the declaration statement.</span></span>  
   
-2. <span data-ttu-id="b757e-108">Spostare l'implementazione dei membri di interfaccia in una classe che implementa l'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="b757e-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
+2. <span data-ttu-id="66262-108">Spostare l'implementazione dei membri di interfaccia in una classe che implementa l'interfaccia.</span><span class="sxs-lookup"><span data-stu-id="66262-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b757e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b757e-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="66262-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="66262-109">See also</span></span>
 
-- [<span data-ttu-id="b757e-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="b757e-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
-- [<span data-ttu-id="b757e-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="b757e-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="66262-110">Istruzione Interface</span><span class="sxs-lookup"><span data-stu-id="66262-110">Interface Statement</span></span>](../language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="66262-111">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="66262-111">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
