--- a/docs/visual-basic/misc/bc30278.md
+++ b/docs/visual-basic/misc/bc30278.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30278
 ms.assetid: fee206b9-8dc0-436f-9909-abd8c17957f8
-ms.openlocfilehash: 352874bf2291aaa593847447803c4d7a0943ecef
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 187dc6c426ee42863ff76db989e67af672b99d59
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61934173"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390793"
 ---
-# <a name="sub-or-function-expected-after-delegate"></a><span data-ttu-id="8753b-102">È previsto 'Sub' o 'Function' dopo 'Delegate'</span><span class="sxs-lookup"><span data-stu-id="8753b-102">'Sub' or 'Function' expected after 'Delegate'</span></span>
-<span data-ttu-id="8753b-103">Un'istruzione `Delegate` non specifica una routine `Sub` o `Function` .</span><span class="sxs-lookup"><span data-stu-id="8753b-103">A `Delegate` statement does not specify a `Sub` or `Function` procedure.</span></span> <span data-ttu-id="8753b-104">La parola chiave `Sub` o `Function` deve seguire immediatamente la parola chiave `Delegate` .</span><span class="sxs-lookup"><span data-stu-id="8753b-104">The `Sub` or `Function` keyword must immediately follow the `Delegate` keyword.</span></span>  
+# <a name="sub-or-function-expected-after-delegate"></a><span data-ttu-id="3cd6d-102">È previsto 'Sub' o 'Function' dopo 'Delegate'</span><span class="sxs-lookup"><span data-stu-id="3cd6d-102">'Sub' or 'Function' expected after 'Delegate'</span></span>
+<span data-ttu-id="3cd6d-103">Un'istruzione `Delegate` non specifica una routine `Sub` o `Function` .</span><span class="sxs-lookup"><span data-stu-id="3cd6d-103">A `Delegate` statement does not specify a `Sub` or `Function` procedure.</span></span> <span data-ttu-id="3cd6d-104">La parola chiave `Sub` o `Function` deve seguire immediatamente la parola chiave `Delegate` .</span><span class="sxs-lookup"><span data-stu-id="3cd6d-104">The `Sub` or `Function` keyword must immediately follow the `Delegate` keyword.</span></span>  
   
- <span data-ttu-id="8753b-105">**ID errore:** BC30278</span><span class="sxs-lookup"><span data-stu-id="8753b-105">**Error ID:** BC30278</span></span>  
+ <span data-ttu-id="3cd6d-105">**ID errore:** BC30278</span><span class="sxs-lookup"><span data-stu-id="3cd6d-105">**Error ID:** BC30278</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8753b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8753b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3cd6d-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3cd6d-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="8753b-107">Aggiungere la parola chiave `Sub` o `Function` immediatamente dopo `Delegate`.</span><span class="sxs-lookup"><span data-stu-id="8753b-107">Add the `Sub` or `Function` keyword immediately after `Delegate`.</span></span>  
+1. <span data-ttu-id="3cd6d-107">Aggiungere la parola chiave `Sub` o `Function` immediatamente dopo `Delegate`.</span><span class="sxs-lookup"><span data-stu-id="3cd6d-107">Add the `Sub` or `Function` keyword immediately after `Delegate`.</span></span>  
   
-2. <span data-ttu-id="8753b-108">Specificare un nome di routine, un elenco di argomenti e un tipo restituito in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="8753b-108">Specify a procedure name, argument list, and return type as appropriate.</span></span>  
+2. <span data-ttu-id="3cd6d-108">Specificare un nome di routine, un elenco di argomenti e un tipo restituito in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="3cd6d-108">Specify a procedure name, argument list, and return type as appropriate.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8753b-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8753b-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3cd6d-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3cd6d-109">See also</span></span>
 
-- [<span data-ttu-id="8753b-110">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="8753b-110">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="8753b-111">Routine</span><span class="sxs-lookup"><span data-stu-id="8753b-111">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [<span data-ttu-id="3cd6d-110">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="3cd6d-110">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="3cd6d-111">Procedure</span><span class="sxs-lookup"><span data-stu-id="3cd6d-111">Procedures</span></span>](../programming-guide/language-features/procedures/index.md)
