--- a/docs/visual-basic/misc/bc30281.md
+++ b/docs/visual-basic/misc/bc30281.md
@@ -1,5 +1,5 @@
 ---
-title: Struttura '<structurename>' deve contenere almeno una variabile membro di istanza o dichiarazione di evento
+title: La struttura '<structurename>' deve contenere almeno una dichiarazione di evento o di variabile membro di istanza
 ms.date: 07/20/2015
 f1_keywords:
 - bc30281
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30281
 ms.assetid: a03ee4e2-5fea-4933-898f-7f125b25824e
-ms.openlocfilehash: cdb061337b673ce3addf6a1ac2610166037605fd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 13ec306a7c81cdd0f75d15ac6f362d77432c85de
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64664069"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390741"
 ---
-# <a name="structure-structurename-must-contain-at-least-one-instance-member-variable-or-event-declaration"></a><span data-ttu-id="e9370-102">Struttura '\<nomestruttura >' deve contenere almeno una variabile membro di istanza o dichiarazione di evento</span><span class="sxs-lookup"><span data-stu-id="e9370-102">Structure '\<structurename>' must contain at least one instance member variable or Event declaration</span></span>
-<span data-ttu-id="e9370-103">Viene visualizzata una struttura funzionalmente vuota.</span><span class="sxs-lookup"><span data-stu-id="e9370-103">A functionally empty structure occurs.</span></span> <span data-ttu-id="e9370-104">Almeno un membro variabile deve essere dichiarato tra l'istruzione `Structure` e l'istruzione `End Structure` .</span><span class="sxs-lookup"><span data-stu-id="e9370-104">At least one variable member must be declared between the `Structure` statement and the `End Structure` statement.</span></span>  
+# <a name="structure-structurename-must-contain-at-least-one-instance-member-variable-or-event-declaration"></a><span data-ttu-id="87df3-102">La struttura '\<structurename>' deve contenere almeno una dichiarazione di evento o di variabile membro di istanza</span><span class="sxs-lookup"><span data-stu-id="87df3-102">Structure '\<structurename>' must contain at least one instance member variable or Event declaration</span></span>
+<span data-ttu-id="87df3-103">Viene visualizzata una struttura funzionalmente vuota.</span><span class="sxs-lookup"><span data-stu-id="87df3-103">A functionally empty structure occurs.</span></span> <span data-ttu-id="87df3-104">Almeno un membro variabile deve essere dichiarato tra l'istruzione `Structure` e l'istruzione `End Structure` .</span><span class="sxs-lookup"><span data-stu-id="87df3-104">At least one variable member must be declared between the `Structure` statement and the `End Structure` statement.</span></span>  
   
- <span data-ttu-id="e9370-105">**ID errore:** BC30281</span><span class="sxs-lookup"><span data-stu-id="e9370-105">**Error ID:** BC30281</span></span>  
+ <span data-ttu-id="87df3-105">**ID errore:** BC30281</span><span class="sxs-lookup"><span data-stu-id="87df3-105">**Error ID:** BC30281</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e9370-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e9370-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="87df3-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="87df3-106">To correct this error</span></span>  
   
-- <span data-ttu-id="e9370-107">Aggiungere un'istruzione `Dim` o `Event` alla struttura.</span><span class="sxs-lookup"><span data-stu-id="e9370-107">Add a `Dim` statement or an `Event` statement to the structure.</span></span>  
+- <span data-ttu-id="87df3-107">Aggiungere un'istruzione `Dim` o `Event` alla struttura.</span><span class="sxs-lookup"><span data-stu-id="87df3-107">Add a `Dim` statement or an `Event` statement to the structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e9370-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e9370-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="87df3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="87df3-108">See also</span></span>
 
-- [<span data-ttu-id="e9370-109">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="e9370-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="e9370-110">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="e9370-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="e9370-111">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="e9370-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="87df3-109">Istruzione Structure</span><span class="sxs-lookup"><span data-stu-id="87df3-109">Structure Statement</span></span>](../language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="87df3-110">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="87df3-110">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="87df3-111">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="87df3-111">Event Statement</span></span>](../language-reference/statements/event-statement.md)
