--- a/docs/visual-basic/misc/bc30554.md
+++ b/docs/visual-basic/misc/bc30554.md
@@ -1,5 +1,5 @@
 ---
-title: "'<namespacename>' è ambiguo"
+title: "' <namespacename> ' è ambiguo"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30554
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30554
 ms.assetid: f79778e7-a300-4eef-999f-c5cb22e0fbfa
-ms.openlocfilehash: 62a2e2102bdb87d40f98f583480b57cd6202d189
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8b459b9d7e7bf042ba844ff34620b4106c2a72c4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625168"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390227"
 ---
-# <a name="namespacename-is-ambiguous"></a><span data-ttu-id="015bc-102">'\<NomeSpazioDeiNomi >' è ambiguo</span><span class="sxs-lookup"><span data-stu-id="015bc-102">'\<namespacename>' is ambiguous</span></span>
-<span data-ttu-id="015bc-103">È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome.</span><span class="sxs-lookup"><span data-stu-id="015bc-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="015bc-104">Il compilatore Visual Basic è privo di eventuali regole di risoluzione dei conflitti. è necessario evitare ambiguità tra nomi manualmente.</span><span class="sxs-lookup"><span data-stu-id="015bc-104">The Visual Basic compiler does not have any conflict-resolution rules; you must disambiguate names yourself.</span></span>  
+# <a name="namespacename-is-ambiguous"></a><span data-ttu-id="1c41e-102">' \<namespacename> ' è ambiguo</span><span class="sxs-lookup"><span data-stu-id="1c41e-102">'\<namespacename>' is ambiguous</span></span>
+<span data-ttu-id="1c41e-103">È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome.</span><span class="sxs-lookup"><span data-stu-id="1c41e-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="1c41e-104">Il compilatore Visual Basic non dispone di regole di risoluzione dei conflitti. è necessario evitare di ambiguare i nomi.</span><span class="sxs-lookup"><span data-stu-id="1c41e-104">The Visual Basic compiler does not have any conflict-resolution rules; you must disambiguate names yourself.</span></span>  
   
- <span data-ttu-id="015bc-105">**ID errore:** BC30554</span><span class="sxs-lookup"><span data-stu-id="015bc-105">**Error ID:** BC30554</span></span>  
+ <span data-ttu-id="1c41e-105">**ID errore:** BC30554</span><span class="sxs-lookup"><span data-stu-id="1c41e-105">**Error ID:** BC30554</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="015bc-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="015bc-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1c41e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1c41e-106">To correct this error</span></span>  
   
-- <span data-ttu-id="015bc-107">Specificare un nome completo.</span><span class="sxs-lookup"><span data-stu-id="015bc-107">Fully qualify the name.</span></span>  
+- <span data-ttu-id="1c41e-107">Specificare un nome completo.</span><span class="sxs-lookup"><span data-stu-id="1c41e-107">Fully qualify the name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="015bc-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="015bc-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1c41e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1c41e-108">See also</span></span>
 
-- [<span data-ttu-id="015bc-109">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="015bc-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
-- [<span data-ttu-id="015bc-110">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="015bc-110">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
+- [<span data-ttu-id="1c41e-109">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1c41e-109">Namespaces in Visual Basic</span></span>](../programming-guide/program-structure/namespaces.md)
+- [<span data-ttu-id="1c41e-110">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="1c41e-110">Namespace Statement</span></span>](../language-reference/statements/namespace-statement.md)
