--- a/docs/visual-basic/misc/bc30562.md
+++ b/docs/visual-basic/misc/bc30562.md
@@ -1,5 +1,5 @@
 ---
-title: «<name>'è ambiguo tra le dichiarazioni nei moduli'<modulename1>'e'<modulename2>»
+title: "' <name> ' è ambiguo tra le dichiarazioni nei moduli ' <modulename1> ' è <modulename2> '"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30562
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30562
 ms.assetid: 5c230046-deb8-44d1-b25e-d4c6b59e0c3c
-ms.openlocfilehash: 68984efc929de4f407af752af1b2023093e1b5e4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8c90e499578d74bf7fbaf7644610c0792934632c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625144"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84390124"
 ---
-# <a name="name-is-ambiguous-between-declarations-in-modules-modulename1-and-modulename2"></a><span data-ttu-id="694a5-102">«\<nome >' è ambiguo tra le dichiarazioni nei moduli\<modulename1 >' e '\<modulename2 >»</span><span class="sxs-lookup"><span data-stu-id="694a5-102">'\<name>' is ambiguous between declarations in Modules '\<modulename1>' and '\<modulename2>'</span></span>
-<span data-ttu-id="694a5-103">È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome.</span><span class="sxs-lookup"><span data-stu-id="694a5-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="694a5-104">Il compilatore Visual Basic non dispone di regole di risoluzione dei conflitti. è necessario evitare ambiguità tra nomi manualmente.</span><span class="sxs-lookup"><span data-stu-id="694a5-104">The Visual Basic compiler does not have any conflict resolution rules; you must disambiguate names yourself.</span></span>  
+# <a name="name-is-ambiguous-between-declarations-in-modules-modulename1-and-modulename2"></a><span data-ttu-id="b1562-102">' \<name> ' è ambiguo tra le dichiarazioni nei moduli ' \<modulename1> ' è \<modulename2> '</span><span class="sxs-lookup"><span data-stu-id="b1562-102">'\<name>' is ambiguous between declarations in Modules '\<modulename1>' and '\<modulename2>'</span></span>
+<span data-ttu-id="b1562-103">È stato specificato un nome che è ambiguo ed è quindi in conflitto con un altro nome.</span><span class="sxs-lookup"><span data-stu-id="b1562-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="b1562-104">Il compilatore Visual Basic non dispone di alcuna regola di risoluzione dei conflitti; è necessario evitare di ambiguare i nomi.</span><span class="sxs-lookup"><span data-stu-id="b1562-104">The Visual Basic compiler does not have any conflict resolution rules; you must disambiguate names yourself.</span></span>  
   
- <span data-ttu-id="694a5-105">**ID errore:** BC30562</span><span class="sxs-lookup"><span data-stu-id="694a5-105">**Error ID:** BC30562</span></span>  
+ <span data-ttu-id="b1562-105">**ID errore:** BC30562</span><span class="sxs-lookup"><span data-stu-id="b1562-105">**Error ID:** BC30562</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="694a5-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="694a5-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b1562-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b1562-106">To correct this error</span></span>  
   
-- <span data-ttu-id="694a5-107">Specificare un nome completo.</span><span class="sxs-lookup"><span data-stu-id="694a5-107">Fully qualify the name.</span></span>  
+- <span data-ttu-id="b1562-107">Specificare un nome completo.</span><span class="sxs-lookup"><span data-stu-id="b1562-107">Fully qualify the name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="694a5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="694a5-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b1562-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b1562-108">See also</span></span>
 
-- [<span data-ttu-id="694a5-109">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="694a5-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)
-- [<span data-ttu-id="694a5-110">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="694a5-110">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
+- [<span data-ttu-id="b1562-109">Spazi dei nomi in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b1562-109">Namespaces in Visual Basic</span></span>](../programming-guide/program-structure/namespaces.md)
+- [<span data-ttu-id="b1562-110">Istruzione Namespace</span><span class="sxs-lookup"><span data-stu-id="b1562-110">Namespace Statement</span></span>](../language-reference/statements/namespace-statement.md)
